modal overflow css fix

--- a/static/styles/mind/_forms.scss
+++ b/static/styles/mind/_forms.scss
@@ -112,6 +112,7 @@
    #logo-form, .logo-form {
     float: left;width:100%;background-repeat: no-repeat; margin-bottom:40px;
   }
+  overflow:scroll;
 }
 
 .modal-close, .modal-close:hover {opacity: 1;}
